# cosmic_console

./: .gitignore  README.md  package-lock.json  package.json
public/: splashscreen.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/movies/: README.md
src-tauri/src/: main.rs
src/api/lights/: walkInOff.ts  walkInOn.ts
src/components/: main-sidebar.tsx
src/screens/: index.tsx  movie.tsx  movies.tsx  open-space.tsx  stellarium.tsx
