[package]
name = "cosmic_controller"
version = "0.1.0"
description = "Controls for Sci-Port's Planetarium"
authors = ["you"]
edition = "2021"

exclude = [
    "/src-tauri/assets/OpenSpace", "/src-tauri/assets/Stellarium", "/src-tauri/assets/movies"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-all", "http-all", "protocol-asset", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


